--- a/edu.css
+++ b/edu.css
@@ -96,6 +96,14 @@ color: #FF2759;
     left: 1442px;
     top: 427px;
 }
+
+.a6{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 477px;
+}
 .listing{
     /* 🦆 icon "hamburger menu" */
 
