--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,13 @@ li a:hover{
     left: 1442px;
     top: 427px;
 }
+.a6{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 477px;
+}
 .listing{
     /* 🦆 icon "hamburger menu" */
 
