replacing files into their place

--- a/cont.css
+++ b/cont.css
@@ -79,3 +79,13 @@ top: 353px;
 
 background: #2F2F2F;
 }
+#con{
+position: absolute;
+width: 272px;
+height: 70px;
+left: 819px;
+top: 744px;
+
+background: #FF2642;
+
+}
