removing dependencies from styles

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
-html{
-<<<<<<< HEAD
-    padding:0;
-    margin: 0;
-=======
-    width: 1511.65px;
-    height: 1050px;
->>>>>>> main
-}
+
 body{
     background-color: #333333;
 }
@@ -72,29 +64,10 @@ top: 43px;
     display: inline;
     display: table-row;
 } 
-img{
-<<<<<<< HEAD
-=======
-    /* Rectangle 4 */
 
->>>>>>> main
-position: absolute;
-width: 577px;
-height: 982px;
-left: 831px;
-top: 0px;
 
-<<<<<<< HEAD
-=======
-/* background: url(Rhonah_20221015_145218-removebg-preview.png); */
->>>>>>> main
-
-}
 img
 {
-    /* Frame 8 */
-
-/* Auto layout */
 display: flex;
 flex-direction: row;
 align-items: flex-start;
@@ -107,14 +80,10 @@ height: 1002px;
 left: 821px;
 top: -10px;
 
-
-
-/* Rectangle 4 */
-
 width: 577px;
 height: 982px;
 
-background: url(Rhonah_20221015_145218-removebg-preview.png);
+background: url("fiacre.jpg");
 
 /* Inside auto layout */
 flex: none;
