--- a/skill.css
+++ b/skill.css
@@ -1,6 +1,62 @@
+body{
+    background-image: url("junior.jpg");
+    background-repeat:no-repeat;
+    background-size: 1511.65px 984.6px;
 
+}
 ul{
     list-style-type: style type none;
      
 }
+.a1{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 262px;
+}
+.a2{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 314px;
+}
+.a3{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 374px;
+}
+.a4{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 374px;
+}
+.a5{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 427px;
+}
 
+.a6{
+    position:  absolute;
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 477px;
+}
+.listing{
+    /* 🦆 icon "hamburger menu" */
+
+position: absolute;
+width: 48.4px;
+height: 44px;
+left: 1414px;
+top: 43px;
+}
