--- a/boo.css
+++ b/boo.css
@@ -1,6 +1,9 @@
 body{
     background-image: url(pexels-jorge-jesus-614117.jpg);
+    background-repeat: no-repeat;
+    background-size: 1553px 982px;
 }
+ 
 ul{
     list-style-type:  none;
 }
@@ -21,7 +24,6 @@ color: #FFFFFF;
 }
 .co{
      
-
 position: absolute;
 width: 162px;
 height: 48px;
