--- a/edu.css
+++ b/edu.css
@@ -111,3 +111,34 @@ line-height: 48px;
 
 color: #FFFFFF;
 }
+#face{
+    /* 🦆 icon "facebook" */
+ position: absolute;
+ left: 1051px;
+ top: 1003px;
+  
+  }
+  #goog{
+   /* 🦆 icon "google" */
+ position: absolute;
+ left: 1207px;
+ top: 1002px;
+ 
+  }
+ #inst{
+ /* 🦆 icon "instagram" */
+ position: absolute;
+ left: 1129px;
+ top: 1003px;
+ }
+  #linked{
+ position: absolute;
+ left: 1355px;
+ top: 1004px;
+ }
+ #twi{
+     /* 🦆 icon "twitter" */
+ position: absolute;
+ left: 1269px;
+ top: 1003px;
+ }
