--- a/boo.css
+++ b/boo.css
@@ -1,9 +1,9 @@
 body{
     background-image: url(pexels-jorge-jesus-614117.jpg);
     background-repeat: no-repeat;
-    background-size: 1553px 982px;
+    background-size: 1512px 982px;
 }
- 
+
 ul{
     list-style-type:  none;
 }
@@ -27,7 +27,7 @@ color: #FFFFFF;
 position: absolute;
 width: 162px;
 height: 48px;
-left: 757px;
+left: 550px;
 top: 644px;
 
 font-family: 'Inter';
@@ -46,12 +46,12 @@ width: 70px;
 height: 39px;
 left: 1141px;
 top: 452px;
-
+/* 
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
 font-size: 32px;
-line-height: 39px;
+line-height: 39px; */
 
 color: #FFFFFF;
 }
@@ -62,11 +62,11 @@ height: 39px;
 left: 1148px;
 top: 656px;
 
-font-family: 'Inter';
-font-style: normal;
+/* font-family: 'Inter';
+/* font-style: normal;
 font-weight: 700;
 font-size: 32px;
-line-height: 39px;
+line-height: 39px;  */
 
 color: #FFFFFF;
 
@@ -76,16 +76,17 @@ color: #FFFFFF;
 
 position: absolute;
 width: 358px;
-height: 54px;
+height: 40px;
 left: 756px;
 top: 491px;
 
 background: #C32865;
 /* Rectangle 10 */
-
+}
+.bohh{
 position: absolute;
 width: 168px;
-height: 54px;
+height: 40px;
 left: 1057px;
 top: 491px;
 
@@ -97,22 +98,26 @@ background: #222222;
 
 position: absolute;
 width: 275px;
-height: 55px;
+height: 40px;
 left: 732px;
 top: 692px;
 
 background: #C32865;
 /* Rectangle 12 */
 
+}
+.bocoo{
+
+
 position: absolute;
 width: 218px;
-height: 55px;
+height: 40px;
 left: 1007px;
 top: 692px;
 
 background: #111926;
-
 }
+
 /* bimwe byapfukiranye ibindi */
 .a1{
     position:  absolute;
