--- a/boo.css
+++ b/boo.css
@@ -219,6 +219,7 @@ top: 43px;
      display: none;
      position: absolute;
      background-color: black;
+     right:0px;
      min-width: 160px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
