--- a/cont.css
+++ b/cont.css
@@ -252,9 +252,9 @@ background: #2F2F2F;
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
 
-        position:  absolute;
+        display:flex;
         
-       display: inline-block;
+       /* display: inline-block; */
   }
   
   /* Dropdown Content (Hidden by Default) */
@@ -262,7 +262,9 @@ background: #2F2F2F;
     display: none;
     position: absolute;
     background-color: black;
-    min-width: 160px;
+    right: 0px;
+     
+    min-width: 360px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
