--- a/skill.css
+++ b/skill.css
@@ -138,7 +138,8 @@ top: 303.44px;
      display: none;
      position: absolute;
      background-color: black;
-     min-width: 160px;
+     right:0px;
+     min-width: 360px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
    }
