--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,8 @@ border: 6px solid #FFFEFE;
      display: none;
      position: absolute;
      background-color: black;
-     min-width: 160px;
+     right:0px;
+     min-width: 360px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
    }
