--- a/cont.css
+++ b/cont.css
@@ -1,9 +1,9 @@
 *{
-    /* margin:0;
-    padding: 0; */
+     margin:0;
+    padding: 0; 
     box-sizing: border-box;
     display: flexbox;
-    flex-direction: column;
+    flex-wrap: wrap;
      
 }
 
@@ -31,24 +31,23 @@ ul{
   }
 .sp{
     display: flexbox;
-/* position: absolute;  */
-width: 391px;
+ position: absolute;  
+ width: 391px;
 height: 58px;
 left: 131px;
 top: 132px;
-/* 
+
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
 font-size: 48px;
 line-height: 58px;
-  */
 color: #27FF59;
 }
 .my{
 display: flexbox;
- /* position: absolute;  */
-width: 563px;
+position: absolute;  
+ width: 563px;
 height: 48px;
 left: 116px;
 top: 420px;
@@ -63,8 +62,8 @@ color: #FFFFFF;
 }
 .para{
 
-/* position: absolute; */
-width: 330px;
+ position: absolute; 
+ width: 330px;
 height: 48px;
 left: 124px;
 top: 514px;
@@ -81,7 +80,7 @@ color: #FFFFFF;
 .labels{
 display: flex;
 
-/* position: absolute; */
+ position: absolute; 
 width: 298px;
 height: 55px;
 left: 806px;
@@ -91,9 +90,9 @@ background: #2F2F2F;
 
 }
 #con{
-     display: flexbox; 
+     display: flex; 
      
- /* position: absolute;   */
+ position: absolute;   
 width: 265px;
 height: 60px;
 left: 819px;
@@ -103,28 +102,28 @@ background: #FF2642;
 
 }
 #education{
-    /* position:  absolute; */
-    width: 15px;
+     position:  absolute; 
+   width: 15px;
     height: 15px;
     left: 1442px;
     top: 314px;
 }
 #experience{
-    /* position:  absolute; */
-    width: 15px;
+    position:  absolute; 
+   width: 15px;
     height: 15px;
     left: 1442px;
     top: 374px;
 }
 #blog{
-    /* position:  absolute; */
+    position:  absolute; 
     width: 15px;
     height: 15px;
     left: 1442px;
     top: 374px;
 }
 #contact{
-    /* position:  absolute; */
+     position:  absolute;
     width: 15px;
     height: 15px;
     left: 1442px;
@@ -132,7 +131,7 @@ background: #FF2642;
 }
 
 .a6{
-    /* position:  absolute; */
+     position:  absolute; 
     width: 15px;
     height: 15px;
     left: 1442px;
@@ -151,47 +150,47 @@ top: 43px;
     position: absolute;
     left: 1371px;
     top: 900px;
-    /* display: inline;
-    display: table-row; */
+    display: inline;
+    display: table-row; 
 }
 .a1{
-    /* position:  absolute; */
-    width: 15px;
+     position:  absolute; 
+     width: 15px;
     height: 15px;
     left: 1442px;
     top: 262px;
 }
 .a2{
-    /* position:  absolute; */
-    width: 15px;
+     position:  absolute; 
+     width: 15px;
     height: 15px;
     left: 1442px;
     top: 314px;
 }
 .a3{
-    /* position:  absolute; */
-    width: 15px;
+     position:  absolute; 
+     width: 15px;
     height: 15px;
     left: 1442px;
     top: 374px;
 }
 .a4{
     position:  absolute;
-    width: 15px;
+     width: 15px;
     height: 15px;
     left: 1442px;
     top: 374px;
 }
 .a5{
-    /* position:  absolute; */
+     position:  absolute; 
     width: 15px;
     height: 15px;
     left: 1442px;
     top: 427px;
 }
 .labels-te1{
-/* position: absolute; */
-width: 298px;
+ position: absolute; 
+ width: 298px;
 height: 55px;
 left: 806px;
 top: 237px;
@@ -200,7 +199,7 @@ background: #2F2F2F;
 }
 .te-em{
 
-/* position: absolute; */
+ position: absolute; 
 width: 250px;
 height: 57px;
 left: 1128px;
@@ -210,7 +209,7 @@ background: #2F2F2F;
 }
 
 .labels-te2{
-/* position: absolute; */
+ position: absolute; 
 width: 455px;
 height: 66px;
 left: 809px;
@@ -225,88 +224,84 @@ background: #2F2F2F;
     flex-direction: row;
     align-items: flex-start;
     padding: 13px 16px;
-    text-align: start;
-    float: left;
-    margin: left 806px;
-    margin: top 445px;
-    /* position: absolute; */
+    text-align: start;  
+    position: absolute; 
     width: 400px;
     height: 204px;
-    /* left: 806px;
-    top: 445px; */
+    left: 806px;
+    top: 445px; 
     
     background: #2F2F2F; 
     }
     #face{
         /* 🦆 icon "facebook" */
-     /* position: absolute; */
+      position: absolute; 
      left: 1051px;
      top:  900px;
       
       }
       #goog{
        /* 🦆 icon "google" */
-     /* position: absolute; */
+      position: absolute; 
      left: 1207px;
      top:  900px;
      
       }
      #inst{
      /* 🦆 icon "instagram" */
-     /* position: absolute; */
+     position: absolute;
      left: 1129px;
      top:  900px;
      }
       #linked{
-     /* position: absolute; */
+     position: absolute;
      left: 1355px;
      top:  900px;
      }
      #twi{
          /* 🦆 icon "twitter" */
-     /* position: absolute; */
+     position: absolute;
      left: 1269px;
      top:  900px;
      }
-  /* Dropdown Button */
- .dropbtn {
-   background-color:#2F2F2F;
-  } 
   
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-
-        display:flex;
-        
-       /* display: inline-block; */
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    /* display: flexbox; */
-    position: absolute; 
-    background-color: black;
-    right: 0px;
+     .dropbtn {
+        background-color:#2F2F2F;
+       } 
+       
+       /* The container <div> - needed to position the dropdown content */
+       .dropdown {
      
-    min-width: 360px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color:white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #2F2F2F;}
- 
+             position:  absolute;
+             
+            display: inline-block;
+       }
+       
+       /* Dropdown Content (Hidden by Default) */
+       .dropdown-content {
+         display: none;
+         position: absolute;
+         background-color: black;
+         right:0px;
+         min-width: 360px;
+         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+         z-index: 1;
+       }
+       
+       /* Links inside the dropdown */
+       .dropdown-content a {
+         color:white;
+         padding: 12px 16px;
+         text-decoration: none;
+         display: block;
+       }
+       
+       /* Change color of dropdown links on hover */
+       .dropdown-content a:hover {background-color: #ddd;}
+       
+       /* Show the dropdown menu on hover */
+       .dropdown:hover .dropdown-content {display: block;}
+       
+       /* Change the background color of the dropdown button when the dropdown content is shown */
+       .dropdown:hover .dropbtn {background-color: #2F2F2F;}
+     
