--- a/cont.css
+++ b/cont.css
@@ -15,19 +15,58 @@ body{
 ul{
     list-style-type:  none;
 }
-  @media only screen and (max-width:800px) { 
-    /* For tablets: */
-    .navi, .dropdown, .rest {
-        width: 100%;
-        height: 100px;
-      }
-  } 
+ 
   @media only screen and (max-width:390px) {
     /* For mobile phones: */
-    .navi, .dropdown, .rest {
-      width: 100%;
-      height: 100px;
+    body{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
     }
+    .rest{
+        width: 65%;
+        height: 100%;
+        margin:0;
+    }
+    .navi, .dropdown {
+      width:auto;
+      height: auto;
+    }
+  }
+  @media only screen and (max-width:800px) {
+    body{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .rest{
+        width: 65%;
+        height: 100%;
+        margin:0;
+    }
+    .navi, .dropdown {
+        width:auto;
+        height: auto;
+      }
+  }
+  @media only screen and (max-width:1024px) {
+    body{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .rest{
+        width: 65%;
+        height: 100%;
+        margin:0;
+    }
+    .navi, .dropdown {
+        width:auto;
+        height: auto;
+      }
   }
 .sp{
     display: flexbox;
