--- a/edu.css
+++ b/edu.css
@@ -7,6 +7,45 @@ body{
     background-size: 1540px 982px;
 
 }
+@media  only screen and (max-width:800px) {
+    .body{
+        width:100%;
+        height:100%;
+        margin:0;
+        width: 100%;
+    }
+    .navi,.dropdown{
+        display: flex;
+        width: 100%;
+        height: fit-content;
+    }
+}
+@media  only screen and (max-width:414px) {
+    .body{
+        width:100%;
+        height:100%;
+        margin:0;
+        width: 100%;
+    }
+    .navi,.dropdown{
+        display: flex;
+        width: 100%;
+        height: fit-content;
+    }
+}
+@media  only screen and (max-width:1024px) {
+    .body{
+        width:100%;
+        height:100%;
+        margin:0;
+        width: 100%;
+    }
+    .navi,.dropdown{
+        display: flex;
+        width: 100%;
+        height: fit-content;
+    }
+}
 ul{
     list-style-type: none;
 }
