--- a/skill.css
+++ b/skill.css
@@ -74,6 +74,12 @@ body{
 ul{
     list-style-type:none;
 }
+.ccc{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 .pp{
 /* MY SPECIALIZATION */
 
