--- a/cont.css
+++ b/cont.css
@@ -53,7 +53,7 @@ ul{
   }
   @media only screen and (max-width:1024px) {
     body{
-        width: 100%;
+        width: 50%;
         height: 100%;
         margin: 0;
         padding: 0;
@@ -343,4 +343,9 @@ background: #2F2F2F;
        
        /* Change the background color of the dropdown button when the dropdown content is shown */
        .dropdown:hover .dropbtn {background-color: #2F2F2F;}
-     
+       .ccc{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+      }
