--- a/cont.css
+++ b/cont.css
@@ -1,11 +1,11 @@
-*{
+/* *{
      margin:0;
     padding: 0; 
     box-sizing: border-box;
     display: flexbox;
     flex-wrap: wrap;
      
-}
+} */
 
 body{
     background-image: url("1000_locations.jpg");
