--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ ul{
 }
 @media  only screen and (max-width:800px) {
     body{
-        background-color:#190e0e;
+        
         width: 100%;
     }
     .right {
@@ -219,7 +219,7 @@ width: 200.5px;
 height: 0px;
 left: 0px;
 top: 772px;
-border: 6px solid #FFFEFE;
+border: 6px solid #FFf;
 }
 .dropbtn {
     background-color:#2F2F2F;
