--- a/boo.css
+++ b/boo.css
@@ -213,7 +213,7 @@ top: 43px;
  
          position:  absolute;
          
-        display: inline-block;
+        display: flex;
    }
    
    /* Dropdown Content (Hidden by Default) */
