--- a/cont.css
+++ b/cont.css
@@ -68,6 +68,22 @@ ul{
         height: auto;
       }
   }
+  .nana{
+    position:absolute;   
+    width: 298px;
+    height: 55px;
+    left: 806px;
+    top: 237px;
+    background: #2F2F2F;
+  }
+  .em{
+    position:  absolute; 
+          width: 250px;
+            height: 57px;
+            left: 1128px;
+            top: 235px;
+            background: #2F2F2F
+  }
 .sp{
     display: flexbox;
  position: absolute;  
